apps-grafana/base/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    # https://kubernetes.io/docs/concepts/overview/working-with-objects/common-labels/
    app.kubernetes.io/name: grafana-stack
    app.kubernetes.io/component: grafana
    toolkit.fluxcd.io/tenant: ops-team
