apps-grafana/base/grafana/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: grafana
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
